update train notebook

--- a/Train/train_notebook.ipynb
+++ b/Train/train_notebook.ipynb
@@ -22,9 +22,7 @@
     "colab": {
       "name": "chess_train.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "jVqX0F8ClYG3"
-      ],
+      "collapsed_sections": [],
       "toc_visible": true
     },
     "accelerator": "GPU"
@@ -36,7 +34,7 @@
         "id": "Ir6bRzL-hWS3"
       },
       "source": [
-        "setup"
+        "# Setup"
       ]
     },
     {
@@ -47,7 +45,7 @@
       "source": [
         "import os"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -58,7 +56,7 @@
       "source": [
         "run_in_colab = True"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -70,6 +68,8 @@
         "if run_in_colab:\n",
         "  !pip install transformers\n",
         "  !pip install wandb\n",
+        "  !pip install git+https://github.com/google-research/bleurt.git\n",
+        "  !pip install datasets\n",
         "\n",
         "  from google.colab import drive\n",
         "  drive.mount('/content/drive')\n",
@@ -96,7 +96,7 @@
         "from Dataset.MovesDataset import MovesDataset\n",
         "from Configs.train_config import config"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -123,7 +123,7 @@
         "else:\n",
         "  BASE_PATH = '/home/joberant/nlp_fall_2021/nofarm/chess/'"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -135,7 +135,7 @@
         "games_data_path = BASE_PATH + 'Data/NEW_fix/games_data'\n",
         "saved_models_path = BASE_PATH + 'Models/'"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,7 +144,7 @@
         "id": "XVorMAYKgPKM"
       },
       "source": [
-        "GPT2\n"
+        "# GPT2\n"
       ]
     },
     {
@@ -155,7 +155,7 @@
       "source": [
         "gpt2 = GPT2()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -166,7 +166,7 @@
       "source": [
         "gpt2.model = gpt2.model.train()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -175,7 +175,7 @@
         "id": "b7AMjxd-h_jW"
       },
       "source": [
-        "Dataset"
+        "# Dataset"
       ]
     },
     {
@@ -186,7 +186,7 @@
       "source": [
         "dataset = MovesDataset([f'{games_data_path}{i+1}.p' for i in range(config['NUMER_OF_DATA_DIRS'])], gpt2.tokenizer) "
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -198,7 +198,7 @@
         "train_size = int(config['train_precentege'] * len(dataset))\n",
         "test_size = len(dataset) - train_size"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -209,7 +209,7 @@
       "source": [
         "train_dataset, test_dataset = random_split(dataset, [train_size, test_size])"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -221,8 +221,17 @@
         "train_dataloader = DataLoader(train_dataset, batch_size=config['batch_size'], shuffle=True)\n",
         "test_dataloader = DataLoader(test_dataset, batch_size=config['batch_size'], shuffle=True)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jHbKE9y8zUlU"
+      },
+      "source": [
+        "# Train"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -230,7 +239,7 @@
         "id": "8NPueVq5i7d2"
       },
       "source": [
-        "validation text"
+        "Validation Text"
       ]
     },
     {
@@ -252,7 +261,7 @@
       "source": [
         "validation_proccessed_data, validation_attn_masks, validation_labels = next(iter(test_dataloader))"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -263,9 +272,9 @@
       "source": [
         "validation_input_encodings = []\n",
         "for i in range(config['batch_size']):\n",
-        "  textual_validation_data = gpt2.tokenizer.decode(token_ids = validation_proccessed_data[i], skip_special_tokens=False).split('<comment> ')\n",
+        "  textual_validation_data = gpt2.tokenizer.decode(token_ids = validation_proccessed_data[i], skip_special_tokens=False).split('<comment>')\n",
         "\n",
-        "  validation_target_text = textual_validation_data[1].split(' <|endoftext|>')[0]\n",
+        "  validation_target_text = textual_validation_data[1].split('<|endoftext|>')[0]\n",
         "  validation_input_text = textual_validation_data[0] \n",
         "\n",
         "  wandb.log({f\"validation_target_text {i}\": wandb.Html(f'<p>{validation_target_text}</p>')})\n",
@@ -277,13 +286,13 @@
         "  \n",
         "  validation_input_encodings.append(validation_input_encoding)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "jHbKE9y8zUlU"
+        "id": "SDUJKUoyE4BX"
       },
       "source": [
         "Train"
@@ -298,10 +307,21 @@
         "optimizer = AdamW(gpt2.model.parameters(), lr= config['lr'])\n",
         "scheduler = get_linear_schedule_with_warmup(\n",
         "    optimizer, num_warmup_steps=5000, num_training_steps=-1\n",
-        ")\n",
-        "loss = 0"
+        ")"
       ],
-      "execution_count": 22,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5_QD1UtPRPoa"
+      },
+      "source": [
+        "loss = 0\n",
+        "pad_token_id = gpt2.tokenizer('[PAD]')['input_ids'][0]"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -319,7 +339,7 @@
         "            if idx % 2000 == 0 and idx != 0:\n",
         "              for i in range(config['batch_size']):\n",
         "                with torch.no_grad():\n",
-        "                    outputs = gpt2.model.generate(validation_input_encodings[i], num_beams=2, no_repeat_ngram_size=2, max_length=769)\n",
+        "                    outputs = gpt2.model.generate(validation_input_encodings[i], num_beams=2, no_repeat_ngram_size=2, max_length=769, pad_token_id=pad_token_id)\n",
         "                    output_text = gpt2.tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
         "                wandb.log({f\"output_text {i}\": wandb.Html(f'<p>{output_text}</p>')})\n",
         "            \n",
@@ -340,6 +360,102 @@
         "\n",
         "            wandb.log({\"epoch\": epoch, \"loss\": loss})\n",
         "            pbar.update(2)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jVqX0F8ClYG3"
+      },
+      "source": [
+        "# Evaluation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vwnIbQcWdL29"
+      },
+      "source": [
+        "every t iterations calculate evaluation metrics for the current model and save the results"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EhhbfW1cIcmj"
+      },
+      "source": [
+        "from Evaluation.Metrics import perplexity, bleurt, bleu"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RZq8YhOdZJUX"
+      },
+      "source": [
+        "from Utils import get_targets_and_outputs"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oqs9p-l-EcCg"
+      },
+      "source": [
+        "gpt2.model = gpt2.model.eval()\n",
+        "# gpt2.load_model(model_path)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W-uo5LT8IcF2"
+      },
+      "source": [
+        "test_perplexity = perplexity(gpt2.model, test_dataloader)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8tQK57G1Ib-F"
+      },
+      "source": [
+        "target_texts, output_texts = get_targets_and_outputs(gpt2, test_dataset, dataset.comment_encoding, pad_token_id)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mUmPJBVEcrl0"
+      },
+      "source": [
+        "test_bleurt = bleurt(target_texts, output_texts)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zw2vcBxDDjdJ"
+      },
+      "source": [
+        "test_bleu = bleu(target_texts, output_texts)"
       ],
       "execution_count": null,
       "outputs": []
