--- a/Train/train_notebook.ipynb
+++ b/Train/train_notebook.ipynb
@@ -132,7 +132,7 @@
         "id": "_VI0s_4NmSbN"
       },
       "source": [
-        "games_data_path = BASE_PATH + 'Data/NEW_fix/games_data'\n",
+        "games_data_path = BASE_PATH + 'Data/NEW_attack/games_data'\n",
         "saved_models_path = BASE_PATH + 'Models/'"
       ],
       "execution_count": null,
