--- a/Train/train_notebook.ipynb
+++ b/Train/train_notebook.ipynb
@@ -281,7 +281,7 @@
         "  wandb.log({f\"validation_input_text {i}\": wandb.Html(f'<p>{validation_input_text}</p>')})\n",
         "\n",
         "  comment_idx = list(validation_proccessed_data[i]).index(dataset.comment_encoding) + 1\n",
-        "  validation_input_encoding = validation_proccessed_data[0][:comment_idx].unsqueeze(0).cuda()\n",
+        "  validation_input_encoding = validation_proccessed_data[i][:comment_idx].unsqueeze(0).cuda()\n",
         "  #validation_input_encoding  = gpt2.tokenizer.encode(validation_input_text, return_tensors=\"pt\").cuda()\n",
         "  \n",
         "  validation_input_encodings.append(validation_input_encoding)"
