--- a/Train/train_notebook.ipynb
+++ b/Train/train_notebook.ipynb
@@ -93,6 +93,7 @@
         "import torch\n",
         "import time\n",
         "from Models.GPT2 import GPT2\n",
+        "from Models.BERT import BERT\n",
         "from Dataset.MovesDataset import MovesDataset\n",
         "from Configs.train_config import config"
       ],
@@ -144,27 +145,26 @@
         "id": "XVorMAYKgPKM"
       },
       "source": [
-        "# GPT2\n"
+        "# Model\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6ewKLGmbgWy7"
+        "id": "UZ7N_8oETXAk"
       },
       "source": [
-        "gpt2 = GPT2()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "WCKvLLXXgeX0"
-      },
-      "source": [
-        "gpt2.model = gpt2.model.train()"
+        "if config['Model'] == 'gpt2':\n",
+        "  gpt2 = GPT2()\n",
+        "  model = gpt2.model.train()\n",
+        "  tokenizer = gpt2.tokenizer\n",
+        "  max_length = 768\n",
+        "\n",
+        "elif config['Model'] == 'bert-base':\n",
+        "  bert = BERT()\n",
+        "  model = bert.model.train()\n",
+        "  tokenizer = bert.tokenizer\n",
+        "  max_length = 512"
       ],
       "execution_count": null,
       "outputs": []
@@ -184,7 +184,7 @@
         "id": "Y_EbPuQSiDOs"
       },
       "source": [
-        "dataset = MovesDataset([f'{games_data_path}{i+1}.p' for i in range(config['NUMER_OF_DATA_DIRS'])], gpt2.tokenizer) "
+        "dataset = MovesDataset([f'{games_data_path}{i+1}.p' for i in range(config['NUMER_OF_DATA_DIRS'])], tokenizer, max_length=max_length) "
       ],
       "execution_count": null,
       "outputs": []
@@ -272,9 +272,9 @@
       "source": [
         "validation_input_encodings = []\n",
         "for i in range(config['batch_size']):\n",
-        "  textual_validation_data = gpt2.tokenizer.decode(token_ids = validation_proccessed_data[i], skip_special_tokens=False).split('<comment>')\n",
+        "  textual_validation_data = tokenizer.decode(token_ids = validation_proccessed_data[i], skip_special_tokens=False).split('<comment>')\n",
         "\n",
-        "  validation_target_text = textual_validation_data[1].split('<|endoftext|>')[0]\n",
+        "  validation_target_text = textual_validation_data[1].split('<|endoftext|>')[0]  # 'endoftext' for Bert\n",
         "  validation_input_text = textual_validation_data[0] \n",
         "\n",
         "  wandb.log({f\"validation_target_text {i}\": wandb.Html(f'<p>{validation_target_text}</p>')})\n",
@@ -282,7 +282,7 @@
         "\n",
         "  comment_idx = list(validation_proccessed_data[i]).index(dataset.comment_encoding) + 1\n",
         "  validation_input_encoding = validation_proccessed_data[i][:comment_idx].unsqueeze(0).cuda()\n",
-        "  #validation_input_encoding  = gpt2.tokenizer.encode(validation_input_text, return_tensors=\"pt\").cuda()\n",
+        "  #validation_input_encoding  = tokenizer.encode(validation_input_text, return_tensors=\"pt\").cuda()\n",
         "  \n",
         "  validation_input_encodings.append(validation_input_encoding)"
       ],
@@ -304,7 +304,7 @@
         "id": "5r2OySwlmIlc"
       },
       "source": [
-        "optimizer = AdamW(gpt2.model.parameters(), lr= config['lr'])\n",
+        "optimizer = AdamW(model.parameters(), lr= config['lr'])\n",
         "scheduler = get_linear_schedule_with_warmup(\n",
         "    optimizer, num_warmup_steps=5000, num_training_steps=-1\n",
         ")"
@@ -319,7 +319,7 @@
       },
       "source": [
         "loss = 0\n",
-        "pad_token_id = gpt2.tokenizer('[PAD]')['input_ids'][0]"
+        "pad_token_id = tokenizer('[PAD]')['input_ids'][0]"
       ],
       "execution_count": null,
       "outputs": []
@@ -336,22 +336,22 @@
         "    with tqdm(total=len(train_dataset) / 2) as pbar:\n",
         "        for idx,entry in enumerate(train_dataloader):\n",
         "\n",
-        "            if idx % 2000 == 0 and idx != 0:\n",
+        "            if idx % 500 == 0 and idx != 0:\n",
         "              for i in range(config['batch_size']):\n",
         "                with torch.no_grad():\n",
-        "                    outputs = gpt2.model.generate(validation_input_encodings[i], num_beams=2, no_repeat_ngram_size=2, max_length=769, pad_token_id=pad_token_id)\n",
-        "                    output_text = gpt2.tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
+        "                    outputs = model.generate(validation_input_encodings[i], num_beams=2, no_repeat_ngram_size=2, max_length=max_length+1, pad_token_id=pad_token_id)\n",
+        "                    output_text = tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
         "                wandb.log({f\"output_text {i}\": wandb.Html(f'<p>{output_text}</p>')})\n",
         "            \n",
         "            if idx % 50000 == 0:\n",
-        "              torch.save(gpt2.model.state_dict(), f'{saved_models_path}{idx}_{time.time()}_{int(loss)}.bin')\n",
+        "              torch.save(model.state_dict(), f'{saved_models_path}{idx}_{time.time()}_{int(loss)}.bin')\n",
         "\n",
-        "            gpt2.model.zero_grad()\n",
+        "            model.zero_grad()\n",
         "\n",
         "            inputs = entry[0].cuda()\n",
         "            attn_masks = entry[1].cuda()\n",
         "            labels = entry[2].cuda()\n",
-        "            outputs = gpt2.model(inputs, labels=labels, attention_mask = attn_masks)\n",
+        "            outputs = model(inputs, labels=labels, attention_mask = attn_masks)\n",
         "\n",
         "            loss = outputs['loss']\n",
         "            loss.backward()\n",
@@ -410,7 +410,7 @@
         "id": "oqs9p-l-EcCg"
       },
       "source": [
-        "gpt2.model = gpt2.model.eval()\n",
+        "model = model.eval()\n",
         "# gpt2.load_model(model_path)"
       ],
       "execution_count": null,
@@ -422,7 +422,7 @@
         "id": "W-uo5LT8IcF2"
       },
       "source": [
-        "test_perplexity = perplexity(gpt2.model, test_dataloader)"
+        "test_perplexity = perplexity(model, test_dataloader)"
       ],
       "execution_count": null,
       "outputs": []
