last pickle as test set

--- a/Train/train_notebook.ipynb
+++ b/Train/train_notebook.ipynb
@@ -159,12 +159,14 @@
         "  model = gpt2.model.train()\n",
         "  tokenizer = gpt2.tokenizer\n",
         "  max_length = 768\n",
+        "  eof = '<|endoftext|>'\n",
         "\n",
         "elif config['Model'] == 'bert-base':\n",
         "  bert = BERT()\n",
         "  model = bert.model.train()\n",
         "  tokenizer = bert.tokenizer\n",
-        "  max_length = 512"
+        "  max_length = 512\n",
+        "  eof = 'endoftext'"
       ],
       "execution_count": null,
       "outputs": []
@@ -181,22 +183,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y_EbPuQSiDOs"
-      },
-      "source": [
-        "dataset = MovesDataset([f'{games_data_path}{i+1}.p' for i in range(config['NUMER_OF_DATA_DIRS'])], tokenizer, max_length=max_length) "
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "eh7s2375iGK0"
       },
       "source": [
-        "train_size = int(config['train_precentege'] * len(dataset))\n",
-        "test_size = len(dataset) - train_size"
+        "# The right way to do train-test split:\n",
+        "# dataset = MovesDataset([f'{games_data_path}{i+1}.p' for i in range(config['NUMER_OF_DATA_DIRS']-1)], tokenizer, max_length=max_length) \n",
+        "# train_size = int(config['train_precentege'] * len(dataset))\n",
+        "# test_size = len(dataset) - train_size\n",
+        "# train_dataset, test_dataset = random_split(dataset, [train_size, test_size])\n",
+        "# train_dataloader = DataLoader(train_dataset, batch_size=config['batch_size'], shuffle=True)\n",
+        "# test_dataloader = DataLoader(test_dataset, batch_size=config['batch_size'], shuffle=True)"
       ],
       "execution_count": null,
       "outputs": []
@@ -204,10 +200,21 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zKKg2VOMiHas"
+        "id": "i6ztgCQwU1Dx"
       },
       "source": [
-        "train_dataset, test_dataset = random_split(dataset, [train_size, test_size])"
+        "# but we calculate our metrics afterwards with the saved models, so we keep the last pickle for testing:"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Y_EbPuQSiDOs"
+      },
+      "source": [
+        "dataset = MovesDataset([f'{games_data_path}{i+1}.p' for i in range(config['NUMER_OF_DATA_DIRS']-1)], tokenizer, max_length=max_length) "
       ],
       "execution_count": null,
       "outputs": []
@@ -218,7 +225,18 @@
         "id": "SNPlpmzLiJ5M"
       },
       "source": [
-        "train_dataloader = DataLoader(train_dataset, batch_size=config['batch_size'], shuffle=True)\n",
+        "train_dataloader = DataLoader(dataset, batch_size=config['batch_size'], shuffle=True)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CNS1749vUbh4"
+      },
+      "source": [
+        "test_dataset = MovesDataset([f'{games_data_path}{i}.p' for i in [config['NUMER_OF_DATA_DIRS']] ], tokenizer, max_length=max_length) \n",
         "test_dataloader = DataLoader(test_dataset, batch_size=config['batch_size'], shuffle=True)"
       ],
       "execution_count": null,
@@ -274,7 +292,7 @@
         "for i in range(config['batch_size']):\n",
         "  textual_validation_data = tokenizer.decode(token_ids = validation_proccessed_data[i], skip_special_tokens=False).split('<comment>')\n",
         "\n",
-        "  validation_target_text = textual_validation_data[1].split('<|endoftext|>')[0]  # 'endoftext' for Bert\n",
+        "  validation_target_text = textual_validation_data[1].split(eof)[0]\n",
         "  validation_input_text = textual_validation_data[0] \n",
         "\n",
         "  wandb.log({f\"validation_target_text {i}\": wandb.Html(f'<p>{validation_target_text}</p>')})\n",
@@ -333,10 +351,10 @@
         "epochs = config['epochs']\n",
         "\n",
         "for epoch in range(epochs):\n",
-        "    with tqdm(total=len(train_dataset) / 2) as pbar:\n",
+        "    with tqdm(total=len(dataset) / 2) as pbar:\n",
         "        for idx,entry in enumerate(train_dataloader):\n",
         "\n",
-        "            if idx % 500 == 0 and idx != 0:\n",
+        "            if idx % 2000 == 0 and idx != 0:\n",
         "              for i in range(config['batch_size']):\n",
         "                with torch.no_grad():\n",
         "                    outputs = model.generate(validation_input_encodings[i], num_beams=2, no_repeat_ngram_size=2, max_length=max_length+1, pad_token_id=pad_token_id)\n",
@@ -407,18 +425,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oqs9p-l-EcCg"
-      },
-      "source": [
-        "model = model.eval()\n",
-        "# gpt2.load_model(model_path)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "W-uo5LT8IcF2"
       },
       "source": [
@@ -433,7 +439,7 @@
         "id": "8tQK57G1Ib-F"
       },
       "source": [
-        "target_texts, output_texts = get_targets_and_outputs(gpt2, test_dataset, dataset.comment_encoding, pad_token_id)"
+        "target_texts, output_texts = get_targets_and_outputs(model, test_dataset, dataset.comment_encoding, pad_token_id)"
       ],
       "execution_count": null,
       "outputs": []
