--- a/Train/test_notebook.ipynb
+++ b/Train/test_notebook.ipynb
@@ -45,7 +45,7 @@
       "source": [
         "import os"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -56,7 +56,7 @@
       "source": [
         "run_in_colab = True"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -97,7 +97,7 @@
         "from Dataset.MovesDataset import MovesDataset\n",
         "from Configs.train_config import config"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -111,7 +111,7 @@
         "else:\n",
         "  BASE_PATH = '/home/joberant/nlp_fall_2021/nofarm/chess/'"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -122,7 +122,7 @@
       "source": [
         "games_data_path = BASE_PATH + 'Data/NEW_attack/games_data'"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,10 +144,10 @@
         "# path_base = BASE_PATH+ u'Models-test/0_1616907487.3351743_0.bin'\n",
         "# path_legal = BASE_PATH+ u'Models-test/0_1616699942.8052278_0-legal.bin'\n",
         "\n",
-        "path_attack = BASE_PATH+ u'Models-test/gpt2.bin'\n",
-        "path_bert = BASE_PATH+ u'Models-test/bert.bin'"
+        "path_attack = BASE_PATH+ u'Models-Final/gpt2.bin'\n",
+        "path_bert = BASE_PATH+ u'Models-Final/bert.bin'"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -178,7 +178,7 @@
         "gpt2_attack.load_model(path_attack)\n",
         "bert.load_model(path_bert)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -193,7 +193,7 @@
         "gpt2_attack.model = gpt2_attack.model.eval().cuda()\n",
         "bert.model = bert.model.eval().cuda()"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -204,7 +204,7 @@
       "source": [
         ""
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -213,9 +213,9 @@
         "id": "Iu0ZCqdyghcL"
       },
       "source": [
-        "model = 'gpt2' "
+        "model = 'gpt2'"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -233,7 +233,7 @@
         "  max = 512\n",
         "  eof = 'endoftext'"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -244,7 +244,7 @@
       "source": [
         "pad_token_id = tested_model.tokenizer('[PAD]')['input_ids'][0]"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -265,7 +265,7 @@
         "# last pickle is our test-set\n",
         "dataset = MovesDataset([f'{games_data_path}{i}.p' for i in [config['NUMER_OF_DATA_DIRS']] ], tested_model.tokenizer, max_length=max)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -276,7 +276,7 @@
       "source": [
         "dataloader = DataLoader(dataset, batch_size=config['batch_size'], shuffle=True)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -297,16 +297,16 @@
         "def get_results():\n",
         "  proccessed_data, attn_masks, labels = next(iter(dataloader))\n",
         "\n",
-        "  #inputs = []\n",
-        "  #targets = []\n",
+        "  # inputs = []\n",
+        "  # targets = []\n",
         "  input_encodings = []\n",
         "  for i in range(config['batch_size']):\n",
         "    textual_data = tested_model.tokenizer.decode(token_ids = proccessed_data[i], skip_special_tokens=False).split('<comment>')\n",
         "\n",
         "    target_text = textual_data[1].split(eof)[0]\n",
-        "    #targets.append(target_text)\n",
+        "    # targets.append(target_text)\n",
         "    input_text = textual_data[0] \n",
-        "    #inputs.apeend(input_text)\n",
+        "    # inputs.append(input_text)\n",
         "\n",
         "    comment_idx = list(proccessed_data[i]).index(dataset.comment_encoding) + 1\n",
         "    input_encoding = proccessed_data[i][:comment_idx].unsqueeze(0).cuda()\n",
@@ -322,7 +322,7 @@
         "\n",
         "  return results"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -332,7 +332,7 @@
       },
       "source": [
         "results = get_results()\n",
-        "results"
+        "print(results)"
       ],
       "execution_count": null,
       "outputs": []
@@ -380,6 +380,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "qCNmbQA9Djbk"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "W-uo5LT8IcF2"
       },
       "source": [
@@ -391,10 +402,43 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "_51D5Z0dCEfq"
+      },
+      "source": [
+        "print(test_perplexity)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q_EzyTOP0Hko"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "8tQK57G1Ib-F"
       },
       "source": [
-        "target_texts, output_texts = get_targets_and_outputs(tested_model, dataset, dataset.comment_encoding, pad_token_id)"
+        "target_texts, output_texts = get_targets_and_outputs(tested_model, dataset, dataset.comment_encoding, pad_token_id, max_length=max, eof=eof)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JpZD-3080MIv"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -416,7 +460,18 @@
         "id": "Tij3zp4rFTX1"
       },
       "source": [
-        "sum(test_bleurt)"
+        "print(sum(test_bleurt))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9lPLBA47CGbd"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -438,7 +493,7 @@
         "id": "X0RTcgimFe0r"
       },
       "source": [
-        "sum(test_bleu)"
+        "print(sum(test_bleu))"
       ],
       "execution_count": null,
       "outputs": []
